[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
omnipaxos_core = { git = "https://github.com/haraldng/omnipaxos" }
omnipaxos_storage = { git = "https://github.com/haraldng/omnipaxos", default-features = true }