[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
commitlog = "0.2.0"
sled = "0.34.7"
lazy_static = "1.4.0"
omnipaxos_core = { git = "https://github.com/haraldng/omnipaxos" }
omnipaxos_storage = { git = "https://github.com/haraldng/omnipaxos", default-features = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}