[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#slog = { version = "2.7.0", optional = true }
#slog-term = { version = "2.9.0", optional = true }
#slog-async = { version = "2.7.0", optional = true }


actix-web = "4.0.0"
http = "0.2"

commitlog = "0.2.0"
lazy_static = "1.4.0"
omnipaxos_core = { git = "https://github.com/haraldng/omnipaxos" }
omnipaxos_storage = { git = "https://github.com/haraldng/omnipaxos", default-features = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
sled = "0.34.7"

#kompact = { git = "https://github.com/kompics/kompact", rev = "94956af", features = ["silent_logging"] }
serial_test = "1.0.0"
restest = "0.1.0"
tempfile = "3.3.0"
rand = "0.8.4"

[features]
#batch_accept = []
#continued_leader_reconfiguration = []
#logging  = [ "slog", "slog-term", "slog-async"]
#
#default = ["continued_leader_reconfiguration", "batch_accept"]